relation: support casting to relation type